<resources>
    <string name="app_name">Պրոֆայթի ուսումնական կենտրոն</string>
    <string name="notification_activity">NotificationView</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Մուտքանուն...</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Ծածկագիր...</string>
    <string name="action_sign_in">Մուտք</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_st_prof">StProfActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Notification</string>
    <string name="codebattle">CodeBattle խաղը կօգնի Ձեզ զարգացնել Ձեր տրամաբանությունը, կոդ գրելու կարողությունը
        և ալգորիթմական մտածելակերպը տարբեր բարդության խնդիրներ լուծելու միջոցով</string>
    <string name="yntrum_enq">  * Ընտրում ենք ակտիվ խնդիրը, որը պատկերված է կանաչ գույնով\n * Գրում ենք խնդիրը լուծող
        ֆունկցիան JavaScript ծրագրավորման լեզվով\n * Խնդիրը կարող եք գրել Ձեր կողմից նախընտրելի խմբագրիչով
        (օրինակ sublime)\n * Արդյունքը պետք է տեղադրել մեր խմբագրիչում և սեղմել ՍՏՈՒԳԵԼ\n * Եթե կան սխալներ, անհրաժեշտ
        է ուղղել դրանք Եթե համակարգը հաստատեց, որ խնդիրը ճիշտ է լուծված,
        ապա ընտրեք ՈՒՂԱՐԿԵԼ \n * Այսպիսով կակտիվանա հաջորդ խնդիրը</string>
    <string name="xax">Խաղը ստեղծված է CodeFights, LeetCode, CodeByte, DevSkill խաղերի մոտիվներով</string>

    <string name="title_activity_code_battle">CodeBattleActivity</string>
    <string name="title_activity_tnayin">TnayinActivity</string>
    <string name="title_activity_qnn_ard">QnnArdActivity</string>
    <string name="title_activity_qnn">QnnActivity</string>
    <string name="title_activity_tester">TesterActivity</string>
    <string name="title_activity_filer">FilerActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_tesakan">TesakanActivity</string>
    <string name="title_activity_kargavorumner">KargavorumnerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="codebattles">CodeBattle</string>
    <string name="das">Դաս</string>
    <string name="modul">Մոդուլ</string>
    <string name="zip_rar_winrar">  Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar
        ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագր օգնությամբ:</string>
    <string name="upload_8mb">Upload -ի առավելագույն ծավալը 8MB</string>
    <string name="w">Ուղարկել առաջադրանքը</string>
    <string name="ww">ՎԵՐԲԵՌՆԵԼ</string>
    <string name="n_n">*Արդյո՞ք դասն արդյունավետ էր  * Արդյո՞ք նյութը մատուցվել է պարզ և մատչելի
        *Արդյո՞ք կարգապահությունը լսարանում պահպանված է պատշաճ մակարդակով</string>
    <string name="_407_20_000"><b> Հեղինակ՝</b> Արմեն Մարջինյան \n\n
        <b>Խմբագրությամբ՝</b> Մանկավարժական գիտությունների թեկնածու, դոցենտ Սամվել Ասատրյանի\n\n
        <b>Տեխնիկական խմբագիր՝</b> Պրոֆայթի ուսումնական կենտրոնի դասախոս, Անահիտ Արամյան\n\n
        <b>Տպագրությունը՝</b> գունավոր\n  <b>Էջերի քանակ՝</b> 407 \n
        <b>Մեկ գրքի արժեքը՝</b> 20.000 ԴՐԱՄ</string>
    <string name="javascript"> Հարգելի՛ ուսանող,<b> JavaScript ծրագրավորման լեզվի տարրերը</b> ուսումնական ձեռնարկը
        ստեղծվել է Պրոֆայթի ուսումնական կենտրոնում, Ձեր ուսումնառության որակը ևս
        մեկ մակարդակով բարձրացնելու համար: Դասագրքի օգնությամբ Դուք կկարողանաք
        գերազանց տիրապետել JavaScript -ին, jQuery -ին, OOP -ին, ինչպես նաև կկարողանաք ստեղծել տարբեր
        խաղեր, հետաքրքր հավելվածներ Canvas -ի, Ajax -ի օգնությամբ: Այստեղ քննարկված են JavaScript -ի
        ամեանավերջին նորույթները, որոնք կօգնեն Ձեզ խորապես պատկերացնել frontend ծրագրավորման գործընթացը
        և լինել որակյալ ծրագրավորող:\n Դասագիրքն ունի մի քանի առավելություններ.</string>
    <string name="js_js_0"> 1.  Առաջին մասնագիտական JS ուսումնական ձեռնարկն է հայերենով,
        \n 2.  Ձեռնարկում ներկայացված է JS -ը 0 -ից մինչ պրոֆեսիոնալ ծրագրավորման մակարդակ
        \n 3.  Ձեռնարկի լեզուն և ոճը հարմար է ինքնուսուցման
        \n 4.  Տեսական բացատրությունները հիմնավորվում են կոնկրետ գործնական առաջադրանքներով ու
        վարժություններով, որոնց կատարման ընթացքը նույնպես տրված է
        \n 5.  Ձեռնարկը խիստ կիրառական է</string>
    <string name="bari"><b>ԲԱՐԻ ԳԱԼՈՒՍՏ</b></string>
    <string name="mutq">Մուտք դեպի համակարգ</string>
    <string name="javascripts"><b>JavaScript ծրագրավորման լեզվի տարրերը</b></string>
    <string name="harcMek">Մոդուլի ընթացքում մատուցված նյութը տեղեկատվությամբ հարուստ էր, բովանդակային և հետաքրքիր</string>
    <string name="harcErku">Դասախոսի կողմից նյութը մատուցվել է հասկանալի և պարզ</string>
    <string name="harcEreq">Ժամանակը լսարանում օգտագործվել է արդյունավետ</string>
    <string name="harcChors">Դուք ստացել եք Ձեր հարցերի պատասխանները</string>
    <string name="harcHing">Դասախոսը բարյացակամ է և հարգալից ուսանողների հանդեպ</string>
    <string name="harcVec">Ձեր նկատմամբ կիրառվել է անհատական մոտեցում</string>
    <string name="harcYot">Դասախոսն ընդգծում է մատուցվող նյութի հետագա մասնագիտական կիրառությունները</string>
    <string name="harcUt">Դասախոսն օբյեկտիվ է և գնահատում է ուսանողներին անկողմնակալ</string>
    <string name="harcVerjnakan">Կցանկանայի՞ք արդյոք, որպեսզի տվյալ դասախոսը շարունակեր դասավանդել Ձեր խմբում</string>
    <string name="textyAreEreq">Ձեր կարծիքով ուսումնական կենտրոնն ի՞նչ առավելություններ ունի</string>
    <string name="textAreErku">Ի՞նչ դժգոհություններ ունեք</string>
    <string name="textAreMek">Ի՞նչ առաջարկություններ ունեք</string>
    <string name="aa">Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագրի օգնությամբ:</string>
    <string name="snooze">snooze</string>
    <string name="hargeli">Հարգելի՛ ուսանող, խնդրում ենք պատասխանել ուսուցման որակի բարելավմանը միտված ստորև բերված հարցերին:</string>
    <string name="harcer">Հարցերը և պատասխանները, առանց ուսանողի տվյալների, ուղարկվում են Պրոֆայթի ուսումնական կենտրոնի ուսուցման որակի վերահսկողության բաժին</string>
    <string name="arm">ՊՐՈՖԱՅԹԻ ՈՒՍՈՒՄՆԱԿԱՆ ԿԵՆՏՐՈՆ \n  © ԱՐՄԵՆ ՄԱՐՋԻՆՅԱՆ</string>

</resources>
