<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.TnajinFragment">


        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/myProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView24"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="8dp"
                                android:layout_weight="1"
                                android:text="@string/modul"
                                android:textColor="@android:color/background_dark"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                                android:id="@+id/or_sksvac3"
                                android:layout_width="148dp"
                                android:layout_height="45dp"
                                android:layout_marginLeft="8dp"
                                android:layout_weight="1"
                                android:hint="" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView35"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="8dp"
                                android:layout_weight="1"
                                android:text="@string/das"
                                android:textColor="@android:color/background_dark"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                                android:id="@+id/or_sksvac4"
                                android:layout_width="148dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_weight="1"
                                android:hint="" />
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@color/colorAccent"
                        android:text="ԳՆԱՀԱՏԱԿԱՆՆԵՐ"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView26"
                                android:layout_width="235dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/w"
                                android:textColor="@android:color/background_dark"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/zip_rar_winrar"
                                android:textColor="@android:color/holo_red_dark"
                                android:textSize="10sp"
                                app:fontFamily="sans-serif" />

                            <TextView
                                android:id="@+id/textView30"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/upload_8mb"
                                android:textColor="@android:color/holo_red_dark"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/button4"
                                android:layout_width="149dp"
                                android:layout_height="26dp"
                                android:layout_margin="15dp"
                                android:background="@android:color/holo_red_dark"
                                android:text="@string/ww"
                                android:textColor="@android:color/background_light"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView27"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Գնահատե՛ք դասը (ամենաբարձրը՝ 5)"
                                android:textColor="@android:color/background_dark"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView28"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/n_n"
                                android:textSize="10sp" />

                            <RatingBar
                                android:id="@+id/ratingBar"
                                style="@style/Widget.AppCompat.RatingBar.Indicator"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:isIndicator="false" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>