<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CodeBattleFragment">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="260dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="51dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/codebattles"
                                android:textColor="@android:color/holo_red_dark"
                                android:textSize="30sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="275dp"
                            android:layout_height="128dp"
                            android:text="@string/codebattle" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.joooonho.SelectableRoundedImageView
                            android:id="@+id/userImageC"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            app:sriv_border_color="#8bc34a"
                            app:sriv_border_width="2dp"
                            app:sriv_oval="true" />

                        <TextView
                            android:id="@+id/nAndsC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/background_dark"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            app:fontFamily="cursive" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/xax"
                        android:textColor="@android:color/background_dark"
                        android:textSize="8sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView2"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:text="Կանոնները շատ պարզ են"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView6"
                        android:layout_marginStart="-0dp"
                        android:layout_marginLeft="-0dp"
                        android:layout_toEndOf="@+id/navigation"
                        android:layout_toRightOf="@+id/navigation"
                        android:text="@string/yntrum_enq"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:fontFamily="sans-serif"
                        android:text="ԱՌԱՋԱՏԱՐ ԽԱՂԱՑՈՂՆԵՐ"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
